[gd_scene load_steps=2 format=3 uid="uid://db445sfr1w1tk"]

[ext_resource type="Script" path="res://Scripts/game_finished_overlay.gd" id="1_4ktpa"]

[node name="GameFinishedOverlay" type="Node2D"]
script = ExtResource("1_4ktpa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AmazingLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "AMAZING !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PLAYER X WON !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY AGAIN"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "EXIT GAME"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
